非推奨メソッド使用箇所を改善