@@ -1,7 +1,9 @@
 package com.example;
 
+import java.lang.reflect.InvocationTargetException;
+
 public class Main {
-    public static void main( String[] args ) throws ClassNotFoundException, InstantiationException, IllegalAccessException
+    public static void main( String[] args ) throws ClassNotFoundException, InstantiationException, IllegalAccessException, IllegalArgumentException, InvocationTargetException, NoSuchMethodException, SecurityException
     {
         if (args.length > 0) {
             ReflectSample instance = null;
@@ -14,7 +16,7 @@ public class Main {
 
             Class<?> clazz = Class.forName("com.example." + args[0]);
             // 引数なしのコンストラクタを呼び出し
-            ReflectSample instance2 = (ReflectSample) clazz.newInstance();
+            ReflectSample instance2 = (ReflectSample) clazz.getDeclaredConstructor().newInstance();
             instance2.hello();
         }
     }
